[button] Fix (design-component): resizing pixles & alignments as Ziplin

--- a/packages/plugin-button/statics/styles/button-sample.scss
+++ b/packages/plugin-button/statics/styles/button-sample.scss
@@ -13,7 +13,7 @@
   position: relative;
   width: fit-content;
   display: inline-block;
-  margin-right: 23px;
+  margin-right: 24px;
   margin-bottom: 24px;
   @include phone {
     margin-bottom: 0px;
