--- a/packages/plugin-button/statics/styles/settings-component-styles.scss
+++ b/packages/plugin-button/statics/styles/settings-component-styles.scss
@@ -36,7 +36,7 @@
   }
 }
 .checkBoxes {
-  padding-top: 35px;
+  padding-top: 13px;
   @include phone {
     padding-top: 22px;
   }
